--- a/index.html
+++ b/index.html
@@ -250,9 +250,8 @@ We provide the <span>clarity of a seasoned CHRO </span>and the <span>efficiency 
   </div>
 </section>
 
-
+   <!-- ================= New Eco-system section ================= -->
   
-   <!-- ================= Circular Lifecycle Wheel - Lotus Petals ================= -->
 
 <section class="lakeside-ecosystem">
     <div class="container">
@@ -265,13 +264,13 @@ We provide the <span>clarity of a seasoned CHRO </span>and the <span>efficiency 
                     <span class="pillar-number">01</span>
                     <h3>Organizational Health: Virtual CHRO</h3>
                 </div>
-                <p class="pillar-focus"><strong>The Focus:</strong> Building a scalable "People OS" for growth-stage enterprises[cite: 1, 20].</p>
+                <p class="pillar-focus"><strong>The Focus:</strong> Building a scalable "People OS" for growth-stage enterprises.</p>
                 <ul class="pillar-list">
-                    <li>Fractional Human Capital leadership managing the full lifecycle from hire to retire[cite: 18, 20].</li>
-                    <li>Deployment of curated HR tech stacks to streamline operations[cite: 21].</li>
-                    <li>Strategic alignment of people processes with business scale[cite: 20].</li>
+                    <li>Fractional Human Capital leadership managing the full lifecycle from hire to retire.</li>
+                    <li>Deployment of curated HR tech stacks to streamline operations.</li>
+                    <li>Strategic alignment of people processes with business scale.</li>
                 </ul>
-                <p class="pillar-impact"><strong>The Impact:</strong> Typically results in a 40% reduction in Time-to-Hire[cite: 21].</p>
+                <p class="pillar-impact"><strong>The Impact:</strong> Typically results in a 40% reduction in Time-to-Hire.</p>
             </div>
 
             <div class="pillar-card highlight">
@@ -279,13 +278,13 @@ We provide the <span>clarity of a seasoned CHRO </span>and the <span>efficiency 
                     <span class="pillar-number">02</span>
                     <h3>Human Well-being: Healthy & Happy</h3>
                 </div>
-                <p class="pillar-focus"><strong>Lakeside Health:</strong> Clinical standard wellbeing via 100+ in-house clinicians[cite: 8, 11].</p>
-                <p class="pillar-focus"><strong>Lakeside Happiness:</strong> Psychometric diagnostics utilizing the PERMA framework[cite: 14, 16].</p>
+                <p class="pillar-focus"><strong>Lakeside Health:</strong> Clinical standard wellbeing via 100+ in-house clinicians.</p>
+                <p class="pillar-focus"><strong>Lakeside Happiness:</strong> Psychometric diagnostics utilizing the PERMA framework.</p>
                 <ul class="pillar-list">
-                    <li>Stepped-Care Model matching intervention intensity to severity[cite: 10].</li>
-                    <li>Evidence-based roadmaps to identify cultural fracture points[cite: 15, 17].</li>
+                    <li>Stepped-Care Model matching intervention intensity to severity.</li>
+                    <li>Evidence-based roadmaps to identify cultural fracture points.</li>
                 </ul>
-                <p class="pillar-impact"><strong>The Impact:</strong> Translating employee wellness into measurable P&L impact[cite: 12].</p>
+                <p class="pillar-impact"><strong>The Impact:</strong> Translating employee wellness into measurable P&L impact.</p>
             </div>
 
             <div class="pillar-card">
@@ -293,13 +292,12 @@ We provide the <span>clarity of a seasoned CHRO </span>and the <span>efficiency 
                     <span class="pillar-number">03</span>
                     <h3>Performance Infrastructure: Cognitive Health</h3>
                 </div>
-                <p class="pillar-focus"><strong>Lakeside BreathEasier:</strong> Optimizing the "Biological Hardware" of your workplace[cite: 22, 23].</p>
-                <ul class="pillar-list">
-                    <li>Medical-Grade HEPA Filtration and real-time CO2/VOC monitoring[cite: 26].</li>
-                    <li>Prevention of the "CO2 Cliff" that degrades executive function[cite: 25].</li>
-                    <li>Infrastructure-as-a-Service for peak mental acuity[cite: 26].</li>
+                <p class="pillar-focus"><strong>Lakeside BreathEasier:</strong> Optimizing the "Biological Hardware" of your workplace.
+                    <li>Medical-Grade HEPA Filtration and real-time CO2/VOC monitoring.</li>
+                    <li>Prevention of the "CO2 Cliff" that degrades executive function.</li>
+                    <li>Infrastructure-as-a-Service for peak mental acuity.</li>
                 </ul>
-                <p class="pillar-impact"><strong>The Impact:</strong> A physical environment built for peak cognitive performance[cite: 26].</p>
+                <p class="pillar-impact"><strong>The Impact:</strong> A physical environment built for peak cognitive performance.</p>
             </div>
         </div>
 
