--- a/index.html
+++ b/index.html
@@ -134,39 +134,33 @@
 <!------------ Growth Dilemma for SMEs -------------->
 
 <section class="growth-dilemma">
-  <h2>The Growth Dilemma for SMEs</h2>
-  <p>
-    As a leader, you're focused on the future. But are outdated HR processes holding you back? 
-    The market is unforgiving, and the challenges are real.
-  </p>
+  <div class="container">
+    <h2>The Growth Dilemma for SMEs</h2>
+    <p class="section-subtitle">
+      As your organization scales, the challenges move from siloed tasks to systemic infrastructure needs. Is your foundation ready?
+    </p>
 
-  <!-- 3 Cards -->
-  <div class="growth-cards">
-    <div class="card">
-      <img src="assets/images/strugglingwithcompliance.png" alt="Compliance Challenges" class="card-img">
-      <h3>Struggling with Compliance?</h3>
-      <p>
-        60% of SMEs in India & the GCC find it challenging to keep up with changing labor laws,
-        putting them at significant financial and legal risk.
-      </p>
-    </div>
+    <div class="growth-cards">
+      <div class="card">
+        <div class="card-icon">⚖️</div>
+        <h3>The Compliance & Risk Trap</h3>
+        <p><strong>The Problem:</strong> 60% of SMEs in India & the GCC struggle with shifting labor laws, leading to financial and legal vulnerability.</p>
+        <p class="bridge-text"><strong>The Lakeside Bridge:</strong> Our Virtual CHRO pillar automates this infrastructure so you can focus on growth instead of firefighting.</p>
+      </div>
 
-    <div class="card">
-            <img src="assets/images/losing talent.png" alt="Compliance Challenges" class="card-img">
-      <h3>Losing Talent to Bigger Players?</h3>
-      <p>
-        SMEs lose top candidates due to prolonged hiring cycles and an inability to offer
-        data-driven career paths in a fierce talent market.
-      </p>
-    </div>
+      <div class="card">
+        <div class="card-icon">🚀</div>
+        <h3>The Talent War with Giants</h3>
+        <p><strong>The Problem:</strong> SMEs lose top-tier talent due to slow hiring cycles and a lack of data-driven career paths.</p>
+        <p class="bridge-text"><strong>The Lakeside Bridge:</strong> We deploy a "People OS" that reduces Time-to-Hire by 40%, giving you the agility of a startup with the sophistication of a Fortune 500 company.</p>
+      </div>
 
-    <div class="card">
-      <img src="assets/images/operating on HR instinct.png" alt="Compliance Challenges" class="card-img">
-      <h3>Operating on HR Instinct?</h3>
-      <p>
-        Without robust data, key decisions on hiring, engagement, and retention are left to
-        guesswork, not strategy, hindering growth.
-      </p>
+      <div class="card highlight-card">
+        <div class="card-icon">🧠</div>
+        <h3>The Productivity & Burnout Ceiling</h3>
+        <p><strong>The Problem:</strong> Hidden stressors—from poor mental wellness to "CO2 Cliffs"—quietly degrade your team’s focus and executive function.</p>
+        <p class="bridge-text"><strong>The Lakeside Bridge:</strong> We optimize the "Biological Hardware" through BreathEasier and ensure a thriving culture with Lakeside Happiness.</p>
+      </div>
     </div>
   </div>
 </section>
