--- a/index.html
+++ b/index.html
@@ -135,10 +135,8 @@
 
 <section class="growth-dilemma">
   <div class="container">
-    <h2>The Growth Dilemma for SMEs</h2>
-    <p class="section-subtitle">
-      As your organization scales, the challenges move from siloed tasks to systemic infrastructure needs. Is your foundation ready?
-    </p>
+     <h2 class="section-title">The Growth Dilemma for SMEs</h2>
+    <p class="section-subtitle">As your organization scales, the challenges move from siloed tasks to systemic infrastructure needs. Is your foundation ready?</p>
 
     <div class="growth-cards">
       <div class="card">
