--- a/index.html
+++ b/index.html
@@ -258,50 +258,56 @@
 
 <!-- ================= OUR MODEL SECTION - Option 1: Horizontal Line Flow (Process Roadmap) ================= -->
   
-<section id="our-model" class="our-model-premium">
-  <h2>Our 4-Step Path to HR Excellence</h2>
-  <p>A transparent, structured process designed to deliver measurable results and sustainable transformation.</p>
+<section class="four-step-path">
+  <div class="container">
+    <h2 class="section-title">Our 4-Step Path to HR Excellence</h2>
+    <p class="section-subtitle">A transparent, structured process designed to deliver measurable results and sustainable transformation.</p>
 
-  <div class="premium-lineflow">
-
-    <div class="premium-step">
-      <div class="step-badge">
-        <img src="assets/images/icon-discover.png" alt="Discover">
+    <div class="steps-grid">
+      <div class="step-card">
+        <div class="step-icon">
+          <img src="assets/images/icon-discover.png" alt="Discover">
+        </div>
+        <div class="step-content">
+          <span class="step-number">01</span>
+          <h3>Discover & Audit</h3>
+          <p>We perform a deep-dive clinical and operational audit into your current processes, identify cultural fracture points, and map your business goals.</p>
+        </div>
       </div>
-      <h3>Discover & Audit</h3>
-      <p>Deep dive into your current processes, pain points, and business goals.</p>
-    </div>
 
-    <div class="premium-connector"></div>
-
-    <div class="premium-step">
-      <div class="step-badge">
-        <img src="assets/images/icon-gear.png" alt="Tech Integration">
+      <div class="step-card">
+        <div class="step-icon">
+          <img src="assets/images/icon-gear.png" alt="Tech Integration">
+        </div>
+        <div class="step-content">
+          <span class="step-number">02</span>
+          <h3>Infrastructure Design</h3>
+          <p>Leveraging IIT-level systems thinking, we select and implement the right-fit HR technology to automate workflows and eliminate administrative overhead.</p>
+        </div>
       </div>
-      <h3>Tech Integration</h3>
-      <p>Select and implement the right-fit HR technology to automate and streamline.</p>
-    </div>
 
-    <div class="premium-connector"></div>
-
-    <div class="premium-step">
-      <div class="step-badge">
-        <img src="assets/images/icon-check.png" alt="Implementation">
+      <div class="step-card">
+        <div class="step-icon">
+          <img src="assets/images/icon-check.png" alt="Implementation">
+        </div>
+        <div class="step-content">
+          <span class="step-number">03</span>
+          <h3>Strategic Rollout</h3>
+          <p>We deploy new policies and well-being frameworks with expert change management, ensuring the new "People OS" is adopted across the organization.</p>
+        </div>
       </div>
-      <h3>Strategic Implementation</h3>
-      <p>Roll out new policies and frameworks with expert change management.</p>
-    </div>
 
-    <div class="premium-connector"></div>
-
-    <div class="premium-step">
-      <div class="step-badge">
-        <img src="assets/images/icon-chart.png" alt="Optimize">
+      <div class="step-card">
+        <div class="step-icon">
+          <img src="assets/images/icon-chart.png" alt="Optimize">
+        </div>
+        <div class="step-content">
+          <span class="step-number">04</span>
+          <h3>Measure & Optimize</h3>
+          <p>Using our "CFO-Ready" dashboards, we provide ongoing data analysis and clinical governance to ensure continuous improvement and P&L impact.</p>
+        </div>
       </div>
-      <h3>Measure & Optimize</h3>
-      <p>Provide ongoing support and data analysis for continuous improvement.</p>
     </div>
-
   </div>
 </section>
 
