--- a/index.html
+++ b/index.html
@@ -169,29 +169,29 @@
   
 <section class="smarter-approach">
   <div class="container">
-    <div class="approach-content">
-      <div class="text-block">
+    <div class="approach-wrapper">
+      <div class="approach-text">
         <h2>A Smarter Approach to Human Capital</h2>
-        <p class="lead-text">
-          You don’t need an enterprise-sized budget to have world-class HR infrastructure.
+        <p class="approach-lead">
+          You don’t need an enterprise-sized budget to have world-class HR infrastructure[cite: 31]. 
         </p>
         <p>
           We founded Lakeside Asia on a simple belief: the right blend of human expertise and 
-          intelligent technology makes strategic HR accessible. We provide the clarity of a 
+          intelligent technology makes strategic HR accessible[cite: 5, 6]. We provide the clarity of a 
           seasoned **Virtual CHRO** and the efficiency of a modern tech stack, all in one seamless service[cite: 18, 20].
         </p>
         <p>
           By integrating **IIT-level technical architecture** with **TISS-level clinical rigor**, 
-          we solve complex people operations through a systems-engineering lens.
+          we solve complex people operations through a systems-engineering lens[cite: 2, 3].
         </p>
         <div class="dna-badges">
-          <span class="badge">IIT Systems Thinking</span>
-          <span class="badge">TISS Clinical Rigor</span>
-          <span class="badge">Fortune 500 Execution</span>
+          <span class="dna-badge">IIT Systems Thinking</span>
+          <span class="dna-badge">TISS Clinical Rigor</span>
+          <span class="dna-badge">Fortune 500 Execution</span>
         </div>
       </div>
-      <div class="image-block">
-        <img src="assets/images/hr-approach.jpg" alt="Lakeside Smarter HR Approach" class="styled-img">
+      <div class="approach-image">
+        <img src="assets/images/hr-approach.jpg" alt="Lakeside Strategic HR" class="feature-img">
       </div>
     </div>
   </div>
