--- a/index.html
+++ b/index.html
@@ -173,16 +173,16 @@
       <div class="approach-text">
         <h2>A Smarter Approach to Human Capital</h2>
         <p class="approach-lead">
-          You don’t need an enterprise-sized budget to have world-class HR infrastructure[cite: 31]. 
+          You don’t need an enterprise-sized budget to have world-class HR infrastructure. 
         </p>
         <p>
           We founded Lakeside Asia on a simple belief: the right blend of human expertise and 
           intelligent technology makes strategic HR accessible[cite: 5, 6]. We provide the clarity of a 
-          seasoned **Virtual CHRO** and the efficiency of a modern tech stack, all in one seamless service[cite: 18, 20].
+          seasoned **Virtual CHRO** and the efficiency of a modern tech stack, all in one seamless service.
         </p>
         <p>
           By integrating **IIT-level technical architecture** with **TISS-level clinical rigor**, 
-          we solve complex people operations through a systems-engineering lens[cite: 2, 3].
+          we solve complex people operations through a systems-engineering lens.
         </p>
         <div class="dna-badges">
           <span class="dna-badge">IIT Systems Thinking</span>
