--- a/index.html
+++ b/index.html
@@ -409,23 +409,35 @@
 </section>
   
     <!-- Founders Section -->
-<section id="about" class="page-header">
-  <h1>Meet our Founders</h1>
-  <p>A unique partnership bridging two decades of enterprise technology leadership with strategic human capital expertise.</p>
-</section>
 
-<section class="founders">
-  <div class="founder">
-    <img src="assets/images/Rohit.png" alt="Rohit Nalwade" class="founder-img" />
-    <h2>Rohit Nalwade</h2>
-    <h3>Co-Founder | Technology & Systems Architect</h3>
-    <p>With 20+ years delivering mission-critical tech projects for giants like Reliance and Mahindra, Rohit applies a systems-thinking approach to build scalable, efficient, and data-driven HR frameworks.</p>
-  </div>
-  <div class="founder">
-    <img src="assets/images/Sweety.png" alt="Sweety Vasani" class="founder-img" />
-    <h2>Sweety Vasani</h2>
-    <h3>Co-Founder | Human Capital Strategist</h3>
-    <p>A seasoned HR leader, Sweety brings deep domain expertise in talent management, compliance, and building people-first cultures that attract and retain top performers across India and the GCC.</p>
+  <section id="about" class="founders-section">
+  <div class="container">
+    <h2 class="section-title">The Multidisciplinary DNA</h2>
+    <p class="section-subtitle">A unique partnership bridging two decades of enterprise technology leadership with clinical-standard human capital expertise.</p>
+
+    <div class="founders-grid">
+      <div class="founder-card">
+        <div class="founder-image">
+          <img src="assets/images/Rohit.png" alt="Rohit Nalwade">
+        </div>
+        <div class="founder-info">
+          <h3>Rohit Nalwade</h3>
+          <span class="founder-role">Co-Founder | Technology & Systems Architect</span>
+          <p>Applying an **IIT-level systems-thinking** approach to organizational infrastructure. With 20+ years of experience delivering mission-critical tech projects for giants like Reliance and Mahindra, Rohit builds the "Biological Hardware" and digital frameworks that allow SMEs to scale without friction.</p>
+        </div>
+      </div>
+
+      <div class="founder-card">
+        <div class="founder-image">
+          <img src="assets/images/Sweety.png" alt="Sweety Vasani">
+        </div>
+        <div class="founder-info">
+          <h3>Sweety Vasani</h3>
+          <span class="founder-role">Co-Founder | Human Capital Strategist</span>
+          <p>Bringing **TISS-level clinical rigor** to people operations. A seasoned HR leader and counselor, Sweety specializes in building "Soul-Ready" cultures through psychometric diagnostics, clinical mental wellness, and strategic talent management across India and the GCC.</p>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
 
