--- a/index.html
+++ b/index.html
@@ -312,44 +312,7 @@
 </section>
 
   
-
-
- 
-   <!-- ================= Circular Lifecycle Wheel - Lotus Petals ================= -->
-
-<section class="lifecycle-wheel">
-  <h2>End-to-End HR Services</h2>
-  <p>From hire to retire, we manage every part of the employee lifecycle with precision, compliance, and care.</p>
-
-
-<div class="lotus-container">
-  <div class="lotus-petal">
-    <div class="petal-content">Recruitment</div>
-  </div>
-  <div class="lotus-petal">
-    <div class="petal-content">Onboarding</div>
-  </div>
-  <div class="lotus-petal">
-    <div class="petal-content">Development</div>
-  </div>
-  <div class="lotus-petal">
-    <div class="petal-content">Performance</div>
-  </div>
-  <div class="lotus-petal">
-    <div class="petal-content">Retention</div>
-  </div>
-  <div class="lotus-petal">
-    <div class="petal-content">Transition</div>
-  </div>
-  <div class="lotus-petal">
-    <div class="petal-content">Separation</div>
-  </div>
-  
-  <div class="lotus-center">
-    Hire to Retire
-  </div>
-</div>
-  </section>
+   
 
      <!-- ================= WHY US Section ================= -->
    <!-- Why Us Section -->
@@ -410,10 +373,10 @@
   
     <!-- Founders Section -->
 
-  <section id="about" class="founders-section">
+ <section id="about" class="founders-section">
   <div class="container">
     <h2 class="section-title">The Multidisciplinary DNA</h2>
-    <p class="section-subtitle">A unique partnership bridging two decades of enterprise technology leadership with clinical-standard human capital expertise.</p>
+    <p class="section-subtitle">A unique partnership bridging enterprise technology and clinical psychology with strategic HR and psychometric diagnostics.</p>
 
     <div class="founders-grid">
       <div class="founder-card">
@@ -422,8 +385,8 @@
         </div>
         <div class="founder-info">
           <h3>Rohit Nalwade</h3>
-          <span class="founder-role">Co-Founder | Technology & Systems Architect</span>
-          <p>Applying an **IIT-level systems-thinking** approach to organizational infrastructure. With 20+ years of experience delivering mission-critical tech projects for giants like Reliance and Mahindra, Rohit builds the "Biological Hardware" and digital frameworks that allow SMEs to scale without friction.</p>
+          <span class="founder-role">Co-Founder | Systems Architect & Psychologist</span>
+          <p>The bridge between **IIT-level systems thinking** and **TISS-level clinical rigor**. With 20+ years in enterprise technology and a deep foundation in psychology, Rohit designs the "Biological Hardware" and cognitive frameworks that ensure organizations are both scalable and mentally resilient.</p>
         </div>
       </div>
 
@@ -433,8 +396,8 @@
         </div>
         <div class="founder-info">
           <h3>Sweety Vasani</h3>
-          <span class="founder-role">Co-Founder | Human Capital Strategist</span>
-          <p>Bringing **TISS-level clinical rigor** to people operations. A seasoned HR leader and counselor, Sweety specializes in building "Soul-Ready" cultures through psychometric diagnostics, clinical mental wellness, and strategic talent management across India and the GCC.</p>
+          <span class="founder-role">Co-Founder | HR Strategist & Psychometric Assessor</span>
+          <p>The driving force behind **"Soul-Ready" cultures**. A seasoned HR leader, counselor, and **Certified Psychometric Assessor**, Sweety translates complex human data into people-first strategies. She ensures that employee well-being and organizational health are treated as two sides of the same coin.</p>
         </div>
       </div>
     </div>
