--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
  <!-- Header -->
 <header>
   <a href="index.html" class="brand">
-    <img src="assets/images/Lakeside Human Capital Logo.png" alt="Lakeside Human Capital Logo" class="logo-img" />
+    <img src="assets/Lakeside Human Capital Logo.png" alt="Lakeside Human Capital Logo" class="logo-img" />
     <span class="brand-name">
       <strong class="brand-bold">LAKESIDE HUMAN CAPITAL</strong> 
     </span>
