--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
     <div class="founders-grid">
       <div class="founder-card">
         <div class="founder-image">
-          <img src="assets/images/Rohit.png" alt="Rohit Nalwade">
+          <img src="assets/images/Rohit Pic - without background.png" alt="Rohit Nalwade">
         </div>
         <div class="founder-info">
           <h3>Rohit Nalwade</h3>
@@ -392,7 +392,7 @@
 
       <div class="founder-card">
         <div class="founder-image">
-          <img src="assets/images/Sweety.png" alt="Sweety Vasani">
+          <img src="assets/Sweety Pic - 3.png" alt="Sweety Vasani">
         </div>
         <div class="founder-info">
           <h3>Sweety Vasani</h3>
