--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         </div>
       </div>
       <div class="approach-image">
-        <img src="assets/images/hr-approach.jpg" alt="Lakeside Strategic HR" class="feature-img">
+        <img src="assets/hr-approach.jpg" alt="Lakeside Strategic HR" class="feature-img">
       </div>
     </div>
   </div>
@@ -381,7 +381,7 @@
     <div class="founders-grid">
       <div class="founder-card">
         <div class="founder-image">
-          <img src="assets/images/Rohit Pic - without background.png" alt="Rohit Nalwade">
+          <img src="assets/Rohit Pic - without background.png" alt="Rohit Nalwade">
         </div>
         <div class="founder-info">
           <h3>Rohit Nalwade</h3>
