--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
     <div class="steps-grid">
       <div class="step-card">
         <div class="step-icon">
-          <img src="assets/images/icon-discover.png" alt="Discover">
+          <img src="assets/icon-discover.png" alt="Discover">
         </div>
         <div class="step-content">
           <span class="step-number">01</span>
@@ -277,7 +277,7 @@
 
       <div class="step-card">
         <div class="step-icon">
-          <img src="assets/images/icon-gear.png" alt="Tech Integration">
+          <img src="assets/icon-gear.png" alt="Tech Integration">
         </div>
         <div class="step-content">
           <span class="step-number">02</span>
@@ -288,7 +288,7 @@
 
       <div class="step-card">
         <div class="step-icon">
-          <img src="assets/images/icon-check.png" alt="Implementation">
+          <img src="assets/icon-check.png" alt="Implementation">
         </div>
         <div class="step-content">
           <span class="step-number">03</span>
@@ -299,7 +299,7 @@
 
       <div class="step-card">
         <div class="step-icon">
-          <img src="assets/images/icon-chart.png" alt="Optimize">
+          <img src="assets/icon-chart.png" alt="Optimize">
         </div>
         <div class="step-content">
           <span class="step-number">04</span>
