--- a/index.html
+++ b/index.html
@@ -198,61 +198,38 @@
 </section>
  
 <!-- ================= OUR SERVICES SECTION ================= -->
- <section id="services" class="services">
-  <h2>Your End-to-End HR Growth Engine</h2>
-  <p>We provide modular services that scale with you. Whether you need to fix a specific problem or build an entire HR framework from the ground up, we have you covered.</p>
-  
-<div class="service-grid">
+ <section class="specialized-services">
+  <div class="container">
+    <h2 class="section-title">Specialized Solutions for Targeted Impact</h2>
+    <p class="section-subtitle">While our Ecosystem provides holistic health, we also offer deep-dive expertise in individual human capital pillars.</p>
 
-  <!-- Talent Acquisition -->
-<a href="services/talent-acquisition.html" class="service-card">
-  <img src="assets/images/talent.png" alt="Talent Acquisition">
-  <h3>Talent Acquisition</h3>
-  <p>Go from manual hiring to a data-driven talent pipeline with AI-powered sourcing and analytics.</p>
-<span class="explore-link">Explore this service →</span>
-</a>
-   
-  <!-- Automated Compliance -->
-   <a href="services/automated-compliance.html" class="service-card">
-    <img src="assets/images/compliance.png" alt="Automated Compliance">
-    <h3>Automated Compliance</h3>
-    <p>Eliminate errors and overhead with streamlined payroll, onboarding, and policies for India & GCC.</p>
-<span class="explore-link">Explore this service →</span>
-  </a>
+    <div class="services-grid">
+      <div class="service-pill">
+        <img src="assets/images/talent.png" alt="Talent Acquisition">
+        <h3>Talent Acquisition</h3>
+        <p>AI-powered sourcing and IIT-level systems to build a data-driven talent pipeline.</p>
+      </div>
 
-    <!-- Employee Engagement -->
-<a href="services/employee-engagement.html" class="service-card">
-    <img src="assets/images/EE.png" alt="Employee Engagement">
-    <h3>Employee Engagement</h3>
-    <p>Measure engagement and analyze feedback to create a culture that reduces attrition and boosts productivity.</p>
-<span class="explore-link">Explore this service →</span>
-  </a>
+      <div class="service-pill highlight-pill">
+        <img src="assets/images/wellbeing1.png" alt="Psychometrics">
+        <h3>Psychometric Assessment</h3>
+        <p>Certified diagnostics and clinical-standard tools to identify cultural and performance fit.</p>
+      </div>
 
-  <!-- Performance & Growth -->
-  <a href="services/performance-management.html" class="service-card">
-    <img src="assets/images/Performance.png" alt="Performance & Growth">
-    <h3>Performance & Growth</h3>
-    <p>Link employee performance directly to business outcomes with transparent, data-driven systems.</p>
-<span class="explore-link">Explore this service →</span>
-  </a>
+      <div class="service-pill">
+        <img src="assets/images/compliance.png" alt="Compliance">
+        <h3>HR Compliance & Payroll</h3>
+        <p>Eliminate legal risk with expert-led onboarding and policy frameworks for India & GCC.</p>
+      </div>
 
-     <!-- Service Card 5: People Insights & Well-Being -->
-  <a href="services/wellbeing.html" class="service-card">
-    <img src="assets/images/wellbeing1.png" alt="People Insights & Well-Being">
-    <h3>People Insights & Well-Being</h3>
-    <p>Unlock potential through psychometric insights and well-being tools that drive engagement and productivity.</p>
-<span class="explore-link">Explore this service →</span>
-  </a>
-
-        <!-- Service Card 6: Digital HR Transformation -->
-  <a href="services/HR-transformation.html" class="service-card">
-    <img src="assets/images/HR-transformation.png" alt="Digital HR Transformation">
-    <h3>Digital HR Transformation</h3>
-    <p>Automate and integrate HR systems for seamless, compliant, and efficient workforce operations.</p>
-<span class="explore-link">Explore this service →</span>
-  </a>
-</div>
-   </section>
+      <div class="service-pill">
+        <img src="assets/images/HR-transformation.png" alt="Digital HR">
+        <h3>Digital Transformation</h3>
+        <p>Integrating modern HR tech stacks to automate operations and reduce admin overhead.</p>
+      </div>
+    </div>
+  </div>
+</section>
    
 
 
