--- a/index.html
+++ b/index.html
@@ -177,11 +177,11 @@
         </p>
         <p>
           We founded Lakeside Asia on a simple belief: the right blend of human expertise and 
-          intelligent technology makes strategic HR accessible[cite: 5, 6]. We provide the clarity of a 
-          seasoned **Virtual CHRO** and the efficiency of a modern tech stack, all in one seamless service.
+          intelligent technology makes strategic HR accessible. We provide the clarity of a 
+          seasoned Virtual CHRO and the efficiency of a modern tech stack, all in one seamless service.
         </p>
         <p>
-          By integrating **IIT-level technical architecture** with **TISS-level clinical rigor**, 
+          By integrating IIT-level technical architecture with TISS-level clinical rigor, 
           we solve complex people operations through a systems-engineering lens.
         </p>
         <div class="dna-badges">
