--- a/index.html
+++ b/index.html
@@ -198,39 +198,38 @@
 </section>
  
 <!-- ================= OUR SERVICES SECTION ================= -->
- <section class="specialized-services">
+<section class="specialized-services">
   <div class="container">
     <h2 class="section-title">Specialized Solutions for Targeted Impact</h2>
-    <p class="section-subtitle">While our Ecosystem provides holistic health, we also offer deep-dive expertise in individual human capital pillars.</p>
+    <p class="section-subtitle">While our Ecosystem provides holistic health, we also offer deep-dive expertise for specific organizational needs.</p>
 
     <div class="services-grid">
       <div class="service-pill">
         <img src="assets/images/talent.png" alt="Talent Acquisition">
         <h3>Talent Acquisition</h3>
-        <p>AI-powered sourcing and IIT-level systems to build a data-driven talent pipeline.</p>
+        <p>AI-powered sourcing and systems engineering to build a high-velocity, data-driven talent pipeline.</p>
       </div>
 
       <div class="service-pill highlight-pill">
-        <img src="assets/images/wellbeing1.png" alt="Psychometrics">
+        <img src="assets/images/wellbeing1.png" alt="Mental Wellness">
+        <h3>Employee Mental Wellness</h3>
+        <p>Clinical-standard counseling and wellness roadmaps designed to reduce burnout and enhance cognitive performance.</p>
+      </div>
+
+      <div class="service-pill">
+        <img src="assets/images/EE.png" alt="Psychometrics">
         <h3>Psychometric Assessment</h3>
-        <p>Certified diagnostics and clinical-standard tools to identify cultural and performance fit.</p>
+        <p>Certified diagnostics utilizing the PERMA framework to identify cultural fit and leadership potential.</p>
       </div>
 
       <div class="service-pill">
         <img src="assets/images/compliance.png" alt="Compliance">
         <h3>HR Compliance & Payroll</h3>
-        <p>Eliminate legal risk with expert-led onboarding and policy frameworks for India & GCC.</p>
-      </div>
-
-      <div class="service-pill">
-        <img src="assets/images/HR-transformation.png" alt="Digital HR">
-        <h3>Digital Transformation</h3>
-        <p>Integrating modern HR tech stacks to automate operations and reduce admin overhead.</p>
+        <p>Eliminate legal risk with expert-led onboarding and policy frameworks specifically for India & the GCC.</p>
       </div>
     </div>
   </div>
 </section>
-   
 
 
 <!-- ================= OUR MODEL SECTION - Option 1: Horizontal Line Flow (Process Roadmap) ================= -->
