--- a/index.html
+++ b/index.html
@@ -346,6 +346,45 @@
     </div>
   </div>
 </section>
+
+  <!-- ================= Impact Section ================= -->
+
+  <section class="institutional-impact">
+  <div class="container">
+    <h2 class="section-title">Institutional Impact</h2>
+    <p class="section-subtitle">Proven stability across high-stakes environments, from tier-1 infrastructure to global hospitality.</p>
+    
+    <div class="impact-table-container">
+      <table class="impact-table">
+        <thead>
+          <tr>
+            <th>Sector</th>
+            <th>Scope of Engagement</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td><strong>Energy & Telecom Conglomerates</strong></td>
+            <td>Enterprise-wide mental health restructuring and leadership development for <strong>10,000+ employees</strong>.</td>
+          </tr>
+          <tr>
+            <td><strong>Global Aviation & Luxury Hospitality</strong></td>
+            <td>Crisis management and high-stress resilience training for frontline staff.</td>
+          </tr>
+          <tr>
+            <td><strong>Tier-1 Infrastructure & BFSI</strong></td>
+            <td>Digital transformation of HR workflows and cognitive workspace auditing.</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    
+    <div class="impact-cta">
+      <p>Is your infrastructure ready for scale? We invite you to experience the Lakeside difference.</p>
+      <a href="https://forms.gle/rsZpRCJudDQxaKkz8" class="btn-secondary">Request a Complimentary Cognitive Audit</a>
+    </div>
+  </div>
+</section>
   
     <!-- Founders Section -->
 
