--- a/index.html
+++ b/index.html
@@ -75,59 +75,55 @@
    <!-- ================= New Eco-system section ================= -->
   
 
-<section class="lakeside-ecosystem">
-    <div class="container">
-        <h2 class="section-title">The Lakeside Ecosystem: 360° Organizational Well-being</h2>
-        <p class="section-subtitle">We optimize the "Human Capital Equation" by integrating systems engineering with clinical rigor to ensure your organization is healthy, happy, and high-performing.</p>
+<section class="core-pillars-expanded">
+  <div class="container">
+    <h2 class="section-title">The Lakeside Ecosystem: Core Pillars</h2>
+    <p class="section-subtitle">Modern organizational challenges are systemic, not siloed. We operate at the convergence of systems engineering and clinical psychology.</p>
 
-        <div class="ecosystem-grid">
-            <div class="pillar-card">
-                <div class="pillar-header">
-                    <span class="pillar-number">01</span>
-                    <h3>Organizational Health: Virtual CHRO</h3>
-                </div>
-                <p class="pillar-focus"><strong>The Focus:</strong> Building a scalable "People OS" for growth-stage enterprises.</p>
-                <ul class="pillar-list">
-                    <li>Fractional Human Capital leadership managing the full lifecycle from hire to retire.</li>
-                    <li>Deployment of curated HR tech stacks to streamline operations.</li>
-                    <li>Strategic alignment of people processes with business scale.</li>
-                </ul>
-                <p class="pillar-impact"><strong>The Impact:</strong> Typically results in a 40% reduction in Time-to-Hire.</p>
-            </div>
+    <div class="pillars-grid-v6">
+      <div class="pillar-v6-card">
+        <span class="v-tag">V1</span>
+        <h3>Lakeside Health</h3>
+        <p class="tagline">Mental Wellness & EAP</p>
+        <p>A clinical <strong>Stepped-Care Model</strong> with a dedicated in-house roster of 100+ clinicians. We translate utilization into P&L impact through CFO-ready dashboards.</p>
+      </div>
 
-            <div class="pillar-card highlight">
-                <div class="pillar-header">
-                    <span class="pillar-number">02</span>
-                    <h3>Human Well-being: Healthy & Happy</h3>
-                </div>
-                <p class="pillar-focus"><strong>Lakeside Health:</strong> Clinical standard wellbeing via 100+ in-house clinicians.</p>
-                <p class="pillar-focus"><strong>Lakeside Happiness:</strong> Psychometric diagnostics utilizing the PERMA framework.</p>
-                <ul class="pillar-list">
-                    <li>Stepped-Care Model matching intervention intensity to severity.</li>
-                    <li>Evidence-based roadmaps to identify cultural fracture points.</li>
-                </ul>
-                <p class="pillar-impact"><strong>The Impact:</strong> Translating employee wellness into measurable P&L impact.</p>
-            </div>
+      <div class="pillar-v6-card">
+        <span class="v-tag">V2</span>
+        <h3>Lakeside Happiness</h3>
+        <p class="tagline">Scientific Audits</p>
+        <p>Evidence-based roadmaps utilizing the <strong>PERMA framework</strong> and the <strong>Job Demands-Resources Model</strong> to identify specific cultural fracture points.</p>
+      </div>
 
-            <div class="pillar-card">
-                <div class="pillar-header">
-                    <span class="pillar-number">03</span>
-                    <h3>Performance Infrastructure: Cognitive Health</h3>
-                </div>
-                <p class="pillar-focus"><strong>Lakeside BreathEasier:</strong> Optimizing the "Biological Hardware" of your workplace.
-                    <li>Medical-Grade HEPA Filtration and real-time CO2/VOC monitoring.</li>
-                    <li>Prevention of the "CO2 Cliff" that degrades executive function.</li>
-                    <li>Infrastructure-as-a-Service for peak mental acuity.</li>
-                </ul>
-                <p class="pillar-impact"><strong>The Impact:</strong> A physical environment built for peak cognitive performance.</p>
-            </div>
-        </div>
+      <div class="pillar-v6-card">
+        <span class="v-tag">V3</span>
+        <h3>Lakeside Human Capital</h3>
+        <p class="tagline">Outsourced CHRO</p>
+        <p>Building a scalable "People OS" for growth-stage enterprises. We handle the full lifecycle while deploying tech stacks that result in a <strong>40% reduction in Time-to-Hire</strong>.</p>
+      </div>
 
-        <div class="ecosystem-footer">
-            <p>"At Lakeside Asia, we don’t just manage HR; we take care of the entire organization’s health. We ensure employees are happy, healthy, and breathing clean air."</p>
-            <a href="https://hr.lakesideasia.com" class="cta-button">Schedule a Complimentary Health Check</a>
-        </div>
+      <div class="pillar-v6-card">
+        <span class="v-tag">V4</span>
+        <h3>Lakeside BreathEasier</h3>
+        <p class="tagline">Cognitive Performance Infrastructure</p>
+        <p>Optimizing "Biological Hardware" by addressing <strong>CO2 Cliffs</strong> (>1000ppm) that degrade executive function. Infrastructure-as-a-Service for peak mental acuity.</p>
+      </div>
+
+      <div class="pillar-v6-card">
+        <span class="v-tag">V5</span>
+        <h3>Lakeside Technologies</h3>
+        <p class="tagline">Co-Development</p>
+        <p>Turning internal workflows into <strong>licensable Intellectual Property</strong>. We build bespoke digital assets, from industrial IoT for safety to AI-driven attrition models.</p>
+      </div>
+
+      <div class="pillar-v6-card">
+        <span class="v-tag">V6</span>
+        <h3>Lakeside Academy</h3>
+        <p class="tagline">Future-Proofing</p>
+        <p>Strategic agility through <strong>High-Impact Cohorts</strong> focusing on middle management and High-Potentials (HiPos) for the age of AI.</p>
+      </div>
     </div>
+  </div>
 </section>
 
 
